# aos_core_cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  host_build.sh  sonar-project.properties  suppressions.txt
src/: CMakeLists.txt  aoscoreconfig.hpp
src/app/: CMakeLists.txt  app.cpp  app.hpp
src/cm/: CMakeLists.txt
src/cm/alerts/: CMakeLists.txt  alerts.cpp  alerts.hpp
src/cm/app/: CMakeLists.txt  aoscore.cpp  aoscore.hpp  app.cpp  app.hpp  envvarhandler.hpp  main.cpp
src/cm/communication/: CMakeLists.txt  communication.cpp  communication.hpp
src/cm/config/: CMakeLists.txt  config.cpp  config.hpp
src/cm/database/: CMakeLists.txt  config.hpp  database.cpp  database.hpp  database.md
src/cm/iamclient/: iamclient.cpp  iamclient.hpp  iamclient.md
src/cm/monitoring/: CMakeLists.txt  monitoring.cpp  monitoring.hpp
src/cm/networkmanager/: CMakeLists.txt  dnsserver.cpp  dnsserver.hpp  ipsubnet.cpp  ipsubnet.hpp  netpool.cpp  netpool.hpp  networkmanager.cpp  networkmanager.hpp  networkmanager.md
src/cm/smcontroller/: CMakeLists.txt  config.hpp  smcontroller.cpp  smcontroller.hpp  smhandler.cpp  smhandler.hpp
src/cm/storagestate/: CMakeLists.txt  storagestate.cpp  storagestate.hpp
src/cm/uidgidpool/: CMakeLists.txt  uidgidpool.cpp  uidgidpool.hpp
src/cm/unitconfig/: CMakeLists.txt  jsonprovider.cpp  jsonprovider.hpp
src/cm/utils/: CMakeLists.txt  uidgidvalidator.cpp  uidgidvalidator.hpp
src/common/: CMakeLists.txt  README.md  sonar-project.properties
src/common/cloudprotocol/: CMakeLists.txt  alerts.cpp  alerts.hpp  blobs.cpp  blobs.hpp  certificates.cpp  certificates.hpp  cloudmessage.cpp  cloudmessage.hpp  common.cpp  common.hpp  desiredstatus.cpp  desiredstatus.hpp  envvars.cpp  envvars.hpp  log.cpp  log.hpp  monitoring.cpp  monitoring.hpp  provisioning.cpp  provisioning.hpp  servicediscovery.cpp  servicediscovery.hpp  state.cpp  state.hpp  status.cpp  status.hpp  unitconfig.cpp  unitconfig.hpp  unitstatus.cpp  unitstatus.hpp
src/common/config/: CMakeLists.txt  config.cpp  config.hpp
src/common/downloader/: CMakeLists.txt  downloader.cpp  downloader.hpp
src/common/fileserver/: CMakeLists.txt  fileserver.cpp  fileserver.hpp
src/common/iamclient/: CMakeLists.txt  certificateservice.cpp  certificateservice.hpp  config.hpp  nodesservice.cpp  nodesservice.hpp  permservice.cpp  permservice.hpp  permservicehandler.cpp  permservicehandler.hpp  provisioningservice.cpp  provisioningservice.hpp  publiccertservice.cpp  publiccertservice.hpp  publiccurrentnodeservice.cpp  publiccurrentnodeservice.hpp  publicidentityhandler.cpp  publicidentityhandler.hpp  publicidentityservice.cpp  publicidentityservice.hpp  publicnodeservice.cpp  publicnodeservice.hpp  publicpermservice.cpp  publicpermservice.hpp  publicservice.cpp  publicservice.hpp  publicservicehandler.cpp  publicservicehandler.hpp  subscriptionmanager.cpp  subscriptionmanager.hpp  tlscredentials.cpp  tlscredentials.hpp
src/common/jsonprovider/: CMakeLists.txt  jsonprovider.cpp  jsonprovider.hpp
src/common/logger/: CMakeLists.txt  logger.cpp  logger.hpp  logmodule.hpp
src/common/logging/: CMakeLists.txt  archiver.cpp  archiver.hpp
src/common/logprovider/: CMakeLists.txt  archivator.cpp  archivator.hpp  config.hpp
src/common/migration/: CMakeLists.txt  migration.cpp  migration.hpp
src/common/network/: CMakeLists.txt  interfacemanager.cpp  interfacemanager.hpp  iptables.cpp  iptables.hpp  namespacemanager.cpp  namespacemanager.hpp  network.md  nftables.cpp  nftables.hpp  tc.cpp  tc.hpp  utils.cpp  utils.hpp
src/common/ocispec/: CMakeLists.txt  common.cpp  common.hpp  componentconfig.cpp  imageconfig.cpp  imageindex.cpp  imagemanifest.cpp  imagespec.cpp  itemconfig.cpp  ocispec.hpp  runtimeconfig.cpp  runtimespec.cpp  serviceconfig.cpp
src/common/pbconvert/: CMakeLists.txt  common.cpp  common.hpp  iam.cpp  iam.hpp  sm.cpp  sm.hpp
src/common/process/: CMakeLists.txt  processspawner.cpp  processspawner.hpp
src/common/src/: CMakeLists.txt
src/common/tests/: CMakeLists.txt
src/common/utils/: CMakeLists.txt  channel.hpp  cleanupmanager.cpp  cleanupmanager.hpp  cryptohelper.cpp  cryptohelper.hpp  exception.cpp  exception.hpp  filesystem.cpp  filesystem.hpp  fsplatform.cpp  fsplatform.hpp  fswatcher.cpp  fswatcher.hpp  grpcclientcertlistener.cpp  grpcclientcertlistener.hpp  grpchelper.cpp  grpchelper.hpp  grpcsubscriptionmanager.hpp  image.cpp  image.hpp  json.cpp  json.hpp  parser.cpp  parser.hpp  pk11uri.cpp  pk11uri.hpp  pkcs11helper.cpp  pkcs11helper.hpp  retry.cpp  retry.hpp  syncmessagesender.hpp  time.cpp  time.hpp  utils.cpp  utils.hpp
src/common/version/: CMakeLists.txt  version.hpp.in
src/communication/: CMakeLists.txt  cmconnection.cpp  cmconnection.hpp  communicationmanager.cpp  communicationmanager.hpp  iamconnection.cpp  iamconnection.hpp  securechannel.cpp  securechannel.hpp  socket.hpp  types.hpp  vchan.hpp
src/config/: config.cpp  config.hpp
src/iam/: CMakeLists.txt
src/iam/app/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
src/iam/config/: CMakeLists.txt  config.cpp  config.hpp
src/iam/currentnode/: CMakeLists.txt  currentnodehandler.cpp  currentnodehandler.hpp  systeminfo.cpp  systeminfo.hpp
src/iam/database/: CMakeLists.txt  database.cpp  database.hpp
src/iam/fileidentifier/: CMakeLists.txt  fileidentifier.cpp  fileidentifier.hpp
src/iam/iamclient/: CMakeLists.txt  iamclient.cpp  iamclient.hpp
src/iam/iamserver/: CMakeLists.txt  iamserver.cpp  iamserver.hpp  nodecontroller.cpp  nodecontroller.hpp  protectedmessagehandler.cpp  protectedmessagehandler.hpp  (+3 more)
src/iamclient/: publicnodeclient.cpp  publicnodeclient.hpp
src/jsonprovider/: jsonprovider.cpp
src/logprovider/: archivemanager.hpp
src/mp/: CMakeLists.txt  host_build.sh
src/network/: interfacemanager.cpp  iptables.cpp  networkinterfacemanager.cpp
src/ocispec/: runtimespec.cpp  serviceconfig.cpp
src/pbconvert/: common.cpp  sm.cpp
src/sm/: CMakeLists.txt
src/utils/: CMakeLists.txt  grpchelper.cpp  pk11uri.hpp  pkcs11helper.cpp
tests/logprovider/: CMakeLists.txt
(+631 files in other folders)
