#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target properties
# ######################################################################################################################

set(TARGET_NAMESPACE aos)
set(TARGET_PREFIX aos)
set(TARGET_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR})

# ######################################################################################################################
# AosCore components
# ######################################################################################################################

add_subdirectory(common)

if(WITH_MP)
    add_subdirectory(mp)
endif()
