#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME communication)

# ######################################################################################################################
# Submodules
# ######################################################################################################################

add_subdirectory(cloudprotocol)
